--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "formak",
-  "version": "0.1.0",
+  "name": "@first-class/formak",
+  "version": "0.1.3",
   "description": "A simple form wrapper",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "clean": "rm -rf ./lib; mkdir ./lib",
+    "build": "npm run clean; babel ./index.js -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +28,20 @@
     "prop-types": "~15.7.2"
   },
   "devDependencies": {
-    "react": "~16.8.6"
+    "react": "~16.8.6",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-export-default-from": "7.5.2",
+    "@babel/plugin-proposal-optional-chaining": "7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-stage-1": "7.0.0"
+  },
+  "peerDependencies": {
+    "react": "~16.8.6",
+    "prop-types": "~15.7.2"
   }
 }
